# zbytebuf

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: ide.cmake  utils.cmake
include/: zbytebuf.hpp
include/zbytebuf/: zbytebuf.hpp
projects/TestZByteBuf/TestZByteBuf/: main.cpp
projects/TestZByteBuf/TestZByteBuf.xcodeproj/: project.pbxproj
projects/TestZByteBuf/TestZByteBuf.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/TestZByteBuf/TestZByteBuf.xcodeproj/xcshareddata/xcschemes/: ZByteBufTests.xcscheme  zbytebuf.xcscheme
projects/TestZByteBuf/ZByteBufTests/: ZByteBufTests.mm
projects/TestZByteBuf/fastlane/: Fastfile  README.md
projects/TestZByteBuf/tests/: catch.hpp  normal_test.cpp
projects/TestZByteBuf/zbytebuf/: zbytebuf.hpp
tests/: CMakeLists.txt  main.cpp  test_append.cpp  test_basic.cpp  test_constructors.cpp  test_functional_methods.cpp  test_math_operators.cpp  test_performance.cpp
